[package]
name = "insect-island"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/aviboddu/insect-island"
license = "GPL-3.0+"

[lints.rust]
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
single_use_lifetimes = "deny"

[dependencies]
raylib = { version = "5.5.1", features = ["serde", "with_serde"] }
serde = { version = "1.0.228", features = ["derive"] }

[profile.dev.package.raylib]
opt-level = 3
