[package]
name = "insect-island"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/aviboddu/insect-island"
license = "GPL-3.0+"

[lints.rust]
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
single_use_lifetimes = "deny"

[dependencies]
config = { version = "0.15.19", features = ["json"] }
glob = "0.3.3"
sdl2 = { version = "0.38.0", features = [
    "bundled",
    "gfx",
    "image",
    "mixer",
    "ttf",
] }
serde = { version = "1.0.228", features = ["derive"] }

[profile.dev.package.sdl2]
opt-level = 3
